--- a/client/index.html
+++ b/client/index.html
@@ -8,10 +8,10 @@
 </body>
 
 <template name="index">
-    <header>
-        <nav>
-            <a href="/rooms">Rooms</a>
-            <a href="/emplist">Employers</a>
+    <header class="header">
+        <nav class="nav nav-header">
+            <a class="nav__itm" href="/rooms">Rooms</a>
+            <a class="nav__itm" href="/emplist">Employers</a>
         </nav>
     </header>
 
@@ -50,75 +50,75 @@
 <template name="roomsList">
     <h1 class="title_1">List of rooms:</h1>
 
-    <form id="newRoom">
+    <form id="newRoom" class="form">
         <input type="text" name="room[title]" placeholder="Room title">
         <input type="text" name="room[length]" placeholder="How many tables in room?">
         <h3>Tables map:</h3>
         <div>
-            <input type="checkbox" name="room[map][0]">
-            <input type="checkbox" name="room[map][1]">
-            <input type="checkbox" name="room[map][2]">
-            <input type="checkbox" name="room[map][3]">
-            <input type="checkbox" name="room[map][4]">
-            <input type="checkbox" name="room[map][5]">
-            <input type="checkbox" name="room[map][6]">
-            <input type="checkbox" name="room[map][7]">
-            <input type="checkbox" name="room[map][8]">
-            <input type="checkbox" name="room[map][9]">
-            <input type="checkbox" name="room[map][10]">
-            <input type="checkbox" name="room[map][11]">
-            <input type="checkbox" name="room[map][12]">
-            <input type="checkbox" name="room[map][13]">
-            <input type="checkbox" name="room[map][14]">
-            <input type="checkbox" name="room[map][15]">
-            <input type="checkbox" name="room[map][16]">
-            <input type="checkbox" name="room[map][17]">
-            <input type="checkbox" name="room[map][18]">
-            <input type="checkbox" name="room[map][19]">
-            <input type="checkbox" name="room[map][20]">
-            <input type="checkbox" name="room[map][21]">
-            <input type="checkbox" name="room[map][22]">
-            <input type="checkbox" name="room[map][23]">
-            <input type="checkbox" name="room[map][24]">
-            <input type="checkbox" name="room[map][25]">
-            <input type="checkbox" name="room[map][26]">
-            <input type="checkbox" name="room[map][27]">
-            <input type="checkbox" name="room[map][28]">
-            <input type="checkbox" name="room[map][29]">
-            <input type="checkbox" name="room[map][30]">
-            <input type="checkbox" name="room[map][31]">
-            <input type="checkbox" name="room[map][32]">
-            <input type="checkbox" name="room[map][33]">
-            <input type="checkbox" name="room[map][34]">
-            <input type="checkbox" name="room[map][35]">
-            <input type="checkbox" name="room[map][36]">
-            <input type="checkbox" name="room[map][37]">
-            <input type="checkbox" name="room[map][38]">
-            <input type="checkbox" name="room[map][39]">
-            <input type="checkbox" name="room[map][40]">
-            <input type="checkbox" name="room[map][41]">
-            <input type="checkbox" name="room[map][42]">
-            <input type="checkbox" name="room[map][43]">
-            <input type="checkbox" name="room[map][44]">
-            <input type="checkbox" name="room[map][45]">
-            <input type="checkbox" name="room[map][46]">
-            <input type="checkbox" name="room[map][47]">
-            <input type="checkbox" name="room[map][48]">
-            <input type="checkbox" name="room[map][49]">
-            <input type="checkbox" name="room[map][50]">
-            <input type="checkbox" name="room[map][51]">
-            <input type="checkbox" name="room[map][52]">
-            <input type="checkbox" name="room[map][53]">
-            <input type="checkbox" name="room[map][54]">
-            <input type="checkbox" name="room[map][55]">
-            <input type="checkbox" name="room[map][56]">
-            <input type="checkbox" name="room[map][57]">
-            <input type="checkbox" name="room[map][58]">
-            <input type="checkbox" name="room[map][59]">
-            <input type="checkbox" name="room[map][60]">
-            <input type="checkbox" name="room[map][61]">
-            <input type="checkbox" name="room[map][62]">
-            <input type="checkbox" name="room[map][63]">
+            <input class="table table-button" type="checkbox" name="room[map][0]">
+            <input class="table table-button" type="checkbox" name="room[map][1]">
+            <input class="table table-button" type="checkbox" name="room[map][2]">
+            <input class="table table-button" type="checkbox" name="room[map][3]">
+            <input class="table table-button" type="checkbox" name="room[map][4]">
+            <input class="table table-button" type="checkbox" name="room[map][5]">
+            <input class="table table-button" type="checkbox" name="room[map][6]">
+            <input class="table table-button" type="checkbox" name="room[map][7]">
+            <input class="table table-button" type="checkbox" name="room[map][8]">
+            <input class="table table-button" type="checkbox" name="room[map][9]">
+            <input class="table table-button" type="checkbox" name="room[map][10]">
+            <input class="table table-button" type="checkbox" name="room[map][11]">
+            <input class="table table-button" type="checkbox" name="room[map][12]">
+            <input class="table table-button" type="checkbox" name="room[map][13]">
+            <input class="table table-button" type="checkbox" name="room[map][14]">
+            <input class="table table-button" type="checkbox" name="room[map][15]">
+            <input class="table table-button" type="checkbox" name="room[map][16]">
+            <input class="table table-button" type="checkbox" name="room[map][17]">
+            <input class="table table-button" type="checkbox" name="room[map][18]">
+            <input class="table table-button" type="checkbox" name="room[map][19]">
+            <input class="table table-button" type="checkbox" name="room[map][20]">
+            <input class="table table-button" type="checkbox" name="room[map][21]">
+            <input class="table table-button" type="checkbox" name="room[map][22]">
+            <input class="table table-button" type="checkbox" name="room[map][23]">
+            <input class="table table-button" type="checkbox" name="room[map][24]">
+            <input class="table table-button" type="checkbox" name="room[map][25]">
+            <input class="table table-button" type="checkbox" name="room[map][26]">
+            <input class="table table-button" type="checkbox" name="room[map][27]">
+            <input class="table table-button" type="checkbox" name="room[map][28]">
+            <input class="table table-button" type="checkbox" name="room[map][29]">
+            <input class="table table-button" type="checkbox" name="room[map][30]">
+            <input class="table table-button" type="checkbox" name="room[map][31]">
+            <input class="table table-button" type="checkbox" name="room[map][32]">
+            <input class="table table-button" type="checkbox" name="room[map][33]">
+            <input class="table table-button" type="checkbox" name="room[map][34]">
+            <input class="table table-button" type="checkbox" name="room[map][35]">
+            <input class="table table-button" type="checkbox" name="room[map][36]">
+            <input class="table table-button" type="checkbox" name="room[map][37]">
+            <input class="table table-button" type="checkbox" name="room[map][38]">
+            <input class="table table-button" type="checkbox" name="room[map][39]">
+            <input class="table table-button" type="checkbox" name="room[map][40]">
+            <input class="table table-button" type="checkbox" name="room[map][41]">
+            <input class="table table-button" type="checkbox" name="room[map][42]">
+            <input class="table table-button" type="checkbox" name="room[map][43]">
+            <input class="table table-button" type="checkbox" name="room[map][44]">
+            <input class="table table-button" type="checkbox" name="room[map][45]">
+            <input class="table table-button" type="checkbox" name="room[map][46]">
+            <input class="table table-button" type="checkbox" name="room[map][47]">
+            <input class="table table-button" type="checkbox" name="room[map][48]">
+            <input class="table table-button" type="checkbox" name="room[map][49]">
+            <input class="table table-button" type="checkbox" name="room[map][50]">
+            <input class="table table-button" type="checkbox" name="room[map][51]">
+            <input class="table table-button" type="checkbox" name="room[map][52]">
+            <input class="table table-button" type="checkbox" name="room[map][53]">
+            <input class="table table-button" type="checkbox" name="room[map][54]">
+            <input class="table table-button" type="checkbox" name="room[map][55]">
+            <input class="table table-button" type="checkbox" name="room[map][56]">
+            <input class="table table-button" type="checkbox" name="room[map][57]">
+            <input class="table table-button" type="checkbox" name="room[map][58]">
+            <input class="table table-button" type="checkbox" name="room[map][59]">
+            <input class="table table-button" type="checkbox" name="room[map][60]">
+            <input class="table table-button" type="checkbox" name="room[map][61]">
+            <input class="table table-button" type="checkbox" name="room[map][62]">
+            <input class="table table-button" type="checkbox" name="room[map][63]">
         </div>
 
         <button type="submit">Create</button>
